--- a/view/css/admin_dashbord.css
+++ b/view/css/admin_dashbord.css
@@ -98,3 +98,57 @@
     height: 100px;
     border-radius: 48px;
   }
+
+/* section */
+.cards1 {
+    width: 98vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    gap: 15px;
+  }
+  
+  .cards1 .red {
+    background-color: #f43f5e;
+  }
+  
+  .cards1 .blue {
+    background-color: #3b82f6;
+  }
+  
+  .cards1 .green {
+    background-color: #22c55e;
+  }
+  
+  .cards1 .card1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100px;
+    width: 250px;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    transition: 400ms;
+  }
+  
+  .cards1 .card1 p.tip {
+    font-size: 1em;
+    font-weight: 700;
+  }
+  
+  .cards1 .card1 p.second-text {
+    font-size: .7em;
+  }
+  
+  .cards1 .card1:hover {
+    transform: scale(1.1, 1.1);
+  }
+  
+  .cards1:hover > .card1:not(:hover) {
+    filter: blur(10px);
+    transform: scale(0.9, 0.9);
+  }
