--- a/view/css/admin_dashbord.css
+++ b/view/css/admin_dashbord.css
@@ -152,3 +152,10 @@
     filter: blur(10px);
     transform: scale(0.9, 0.9);
   }
+.shorten{
+    width: 95vw;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
