Doctor Added Successfull With Database

--- a/view/css/admin_dashbord.css
+++ b/view/css/admin_dashbord.css
@@ -221,3 +221,10 @@ body, html {
 }
 
 
+.div_center{
+  width: 98vw;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
